integrations fixes
